# GibbsEnergycalculator

./: .gitignore  main.py  mock_engine.py  pyproject.toml  results.csv  run_test_v2.py  system_health_check.py  task_status.json.bak
src/: calculator.py  config.py  job_manager.py  sweeper.py  tracker.py  tui.py
src/parsers/: base.py  gaussian.py  orca.py
templates/: sp.gjf
